# card-scanner

./: README.md  pyproject.toml
cardscan/: __init__.py  __main__.py  credit.py  main.py
