[project]
name = "cardscan"
version = "0.1.0"
description = "Automated Credit Card Checker"
authors = [
    {name = "Alex Eze",email = "ialexeze@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
cardscan = "cardscan.main:main"
